{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 70,
  "lineage": "8ca15d79-89eb-7dfd-4955-43990bde7ba9",
  "resources": [
    {
      "module": "module.network.module.custom_subnets[0]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nat-gateway-poc-public-us-east-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a1fad7dfe7e97a0",
            "arn": "arn:aws:ec2:us-east-1:804295906245:elastic-ip/eipalloc-04a1fad7dfe7e97a0",
            "association_id": "eipassoc-02bff664ce3926c67",
            "domain": "vpc",
            "id": "eipalloc-04a1fad7dfe7e97a0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e9cd6f5402085b16",
            "private_dns": "ip-10-0-0-152.ec2.internal",
            "private_ip": "10.0.0.152",
            "public_dns": "ec2-50-17-218-121.compute-1.amazonaws.com",
            "public_ip": "50.17.218.121",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "poc",
              "Example": "True",
              "Name": "nat-gateway-poc-public-us-east-1a",
              "Project": "terraform-aws-ref-arch-network"
            },
            "tags_all": {
              "Environment": "poc",
              "Example": "True",
              "Name": "nat-gateway-poc-public-us-east-1a",
              "Project": "terraform-aws-ref-arch-network"
            },
            "vpc": true
          },
          "create_before_destroy": true
        },
        {
          "index_key": "nat-gateway-poc-public-us-east-1b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fe53b260d434d1ed",
            "arn": "arn:aws:ec2:us-east-1:804295906245:elastic-ip/eipalloc-0fe53b260d434d1ed",
            "association_id": "eipassoc-01e3fe4d4b287fdbf",
            "domain": "vpc",
            "id": "eipalloc-0fe53b260d434d1ed",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0df3a676a825a68ee",
            "private_dns": "ip-10-0-0-252.ec2.internal",
            "private_ip": "10.0.0.252",
            "public_dns": "ec2-18-205-222-212.compute-1.amazonaws.com",
            "public_ip": "18.205.222.212",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "poc",
              "Example": "True",
              "Name": "nat-gateway-poc-public-us-east-1b",
              "Project": "terraform-aws-ref-arch-network"
            },
            "tags_all": {
              "Environment": "poc",
              "Example": "True",
              "Name": "nat-gateway-poc-public-us-east-1b",
              "Project": "terraform-aws-ref-arch-network"
            },
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network.module.custom_subnets[0]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nat-gateway-poc-public-us-east-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a1fad7dfe7e97a0",
            "association_id": "eipassoc-02bff664ce3926c67",
            "connectivity_type": "public",
            "id": "nat-0217883c442e3ce54",
            "network_interface_id": "eni-0e9cd6f5402085b16",
            "private_ip": "10.0.0.152",
            "public_ip": "50.17.218.121",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cfdbeba6492a1871",
            "tags": {
              "Environment": "poc",
              "Example": "True",
              "Name": "nat-gateway-poc-public-us-east-1a",
              "Project": "terraform-aws-ref-arch-network"
            },
            "tags_all": {
              "Environment": "poc",
              "Example": "True",
              "Name": "nat-gateway-poc-public-us-east-1a",
              "Project": "terraform-aws-ref-arch-network"
            }
          },
          "dependencies": [
            "module.network.module.custom_subnets.aws_eip.public",
            "module.network.module.custom_subnets.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "nat-gateway-poc-public-us-east-1b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fe53b260d434d1ed",
            "association_id": "eipassoc-01e3fe4d4b287fdbf",
            "connectivity_type": "public",
            "id": "nat-0355c0bbb82bde6ba",
            "network_interface_id": "eni-0df3a676a825a68ee",
            "private_ip": "10.0.0.252",
            "public_ip": "18.205.222.212",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c8b6b9f03b6fc790",
            "tags": {
              "Environment": "poc",
              "Example": "True",
              "Name": "nat-gateway-poc-public-us-east-1b",
              "Project": "terraform-aws-ref-arch-network"
            },
            "tags_all": {
              "Environment": "poc",
              "Example": "True",
              "Name": "nat-gateway-poc-public-us-east-1b",
              "Project": "terraform-aws-ref-arch-network"
            }
          },
          "dependencies": [
            "module.network.module.custom_subnets.aws_eip.public",
            "module.network.module.custom_subnets.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network.module.custom_subnets[0]",
      "mode": "managed",
      "type": "aws_route",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nat-gateway-poc-private-us-east-1a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0dbd090fc511ba9e01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0217883c442e3ce54",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dbd090fc511ba9e0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.custom_subnets.aws_eip.public",
            "module.network.module.custom_subnets.aws_nat_gateway.public",
            "module.network.module.custom_subnets.aws_route_table.private",
            "module.network.module.custom_subnets.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "nat-gateway-poc-private-us-east-1b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e57fd8733512899d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0355c0bbb82bde6ba",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e57fd8733512899d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.custom_subnets.aws_eip.public",
            "module.network.module.custom_subnets.aws_nat_gateway.public",
            "module.network.module.custom_subnets.aws_route_table.private",
            "module.network.module.custom_subnets.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.custom_subnets[0]",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nat-gateway-poc-public-us-east-1a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08a91e73d1d98dd08",
            "id": "r-rtb-0894cd8cfbf8757d71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0894cd8cfbf8757d7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.custom_subnets.aws_route_table.public",
            "module.network.module.vpc.aws_internet_gateway.default",
            "module.network.module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "nat-gateway-poc-public-us-east-1b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08a91e73d1d98dd08",
            "id": "r-rtb-02132f88efa50e6711080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02132f88efa50e671",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.custom_subnets.aws_route_table.public",
            "module.network.module.vpc.aws_internet_gateway.default",
            "module.network.module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.custom_subnets[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nat-gateway-poc-private-us-east-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:route-table/rtb-0dbd090fc511ba9e0",
            "id": "rtb-0dbd090fc511ba9e0",
            "owner_id": "804295906245",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0217883c442e3ce54",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "poc",
              "Example": "True",
              "Name": "nat-gateway-poc-private-us-east-1a",
              "Project": "terraform-aws-ref-arch-network"
            },
            "tags_all": {
              "Environment": "poc",
              "Example": "True",
              "Name": "nat-gateway-poc-private-us-east-1a",
              "Project": "terraform-aws-ref-arch-network"
            },
            "timeouts": null,
            "vpc_id": "vpc-056cd01aca671dba4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "nat-gateway-poc-private-us-east-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:route-table/rtb-0e57fd8733512899d",
            "id": "rtb-0e57fd8733512899d",
            "owner_id": "804295906245",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0355c0bbb82bde6ba",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "poc",
              "Example": "True",
              "Name": "nat-gateway-poc-private-us-east-1b",
              "Project": "terraform-aws-ref-arch-network"
            },
            "tags_all": {
              "Environment": "poc",
              "Example": "True",
              "Name": "nat-gateway-poc-private-us-east-1b",
              "Project": "terraform-aws-ref-arch-network"
            },
            "timeouts": null,
            "vpc_id": "vpc-056cd01aca671dba4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.custom_subnets[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nat-gateway-poc-public-us-east-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:route-table/rtb-0894cd8cfbf8757d7",
            "id": "rtb-0894cd8cfbf8757d7",
            "owner_id": "804295906245",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08a91e73d1d98dd08",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "poc",
              "Example": "True",
              "Name": "nat-gateway-poc-public-us-east-1a",
              "Project": "terraform-aws-ref-arch-network"
            },
            "tags_all": {
              "Environment": "poc",
              "Example": "True",
              "Name": "nat-gateway-poc-public-us-east-1a",
              "Project": "terraform-aws-ref-arch-network"
            },
            "timeouts": null,
            "vpc_id": "vpc-056cd01aca671dba4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "nat-gateway-poc-public-us-east-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:route-table/rtb-02132f88efa50e671",
            "id": "rtb-02132f88efa50e671",
            "owner_id": "804295906245",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08a91e73d1d98dd08",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "poc",
              "Example": "True",
              "Name": "nat-gateway-poc-public-us-east-1b",
              "Project": "terraform-aws-ref-arch-network"
            },
            "tags_all": {
              "Environment": "poc",
              "Example": "True",
              "Name": "nat-gateway-poc-public-us-east-1b",
              "Project": "terraform-aws-ref-arch-network"
            },
            "timeouts": null,
            "vpc_id": "vpc-056cd01aca671dba4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.custom_subnets[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nat-gateway-poc-private-us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eba66254bb0c54f9",
            "route_table_id": "rtb-0dbd090fc511ba9e0",
            "subnet_id": "subnet-08fd1fedb1c3a5812"
          },
          "dependencies": [
            "module.network.module.custom_subnets.aws_route_table.private",
            "module.network.module.custom_subnets.aws_subnet.private",
            "module.network.module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "nat-gateway-poc-private-us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08fb1ccf562e1fa4e",
            "route_table_id": "rtb-0e57fd8733512899d",
            "subnet_id": "subnet-039a483868df1e5b9"
          },
          "dependencies": [
            "module.network.module.custom_subnets.aws_route_table.private",
            "module.network.module.custom_subnets.aws_subnet.private",
            "module.network.module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.custom_subnets[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nat-gateway-poc-public-us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0561f08fc013e4227",
            "route_table_id": "rtb-0894cd8cfbf8757d7",
            "subnet_id": "subnet-0cfdbeba6492a1871"
          },
          "dependencies": [
            "module.network.module.custom_subnets.aws_route_table.public",
            "module.network.module.custom_subnets.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "nat-gateway-poc-public-us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f0b37da6e3cfb67",
            "route_table_id": "rtb-02132f88efa50e671",
            "subnet_id": "subnet-0c8b6b9f03b6fc790"
          },
          "dependencies": [
            "module.network.module.custom_subnets.aws_route_table.public",
            "module.network.module.custom_subnets.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.custom_subnets[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nat-gateway-poc-private-us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:subnet/subnet-08fd1fedb1c3a5812",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08fd1fedb1c3a5812",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "804295906245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "poc",
              "Example": "True",
              "Name": "nat-gateway-poc-private-us-east-1a",
              "Project": "terraform-aws-ref-arch-network"
            },
            "tags_all": {
              "Environment": "poc",
              "Example": "True",
              "Name": "nat-gateway-poc-private-us-east-1a",
              "Project": "terraform-aws-ref-arch-network"
            },
            "vpc_id": "vpc-056cd01aca671dba4"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "nat-gateway-poc-private-us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:subnet/subnet-039a483868df1e5b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039a483868df1e5b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "804295906245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "poc",
              "Example": "True",
              "Name": "nat-gateway-poc-private-us-east-1b",
              "Project": "terraform-aws-ref-arch-network"
            },
            "tags_all": {
              "Environment": "poc",
              "Example": "True",
              "Name": "nat-gateway-poc-private-us-east-1b",
              "Project": "terraform-aws-ref-arch-network"
            },
            "vpc_id": "vpc-056cd01aca671dba4"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.custom_subnets[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nat-gateway-poc-public-us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:subnet/subnet-0cfdbeba6492a1871",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cfdbeba6492a1871",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "804295906245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "poc",
              "Example": "True",
              "Name": "nat-gateway-poc-public-us-east-1a",
              "Project": "terraform-aws-ref-arch-network"
            },
            "tags_all": {
              "Environment": "poc",
              "Example": "True",
              "Name": "nat-gateway-poc-public-us-east-1a",
              "Project": "terraform-aws-ref-arch-network"
            },
            "vpc_id": "vpc-056cd01aca671dba4"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "nat-gateway-poc-public-us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:subnet/subnet-0c8b6b9f03b6fc790",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.192/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8b6b9f03b6fc790",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "804295906245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "poc",
              "Example": "True",
              "Name": "nat-gateway-poc-public-us-east-1b",
              "Project": "terraform-aws-ref-arch-network"
            },
            "tags_all": {
              "Environment": "poc",
              "Example": "True",
              "Name": "nat-gateway-poc-public-us-east-1b",
              "Project": "terraform-aws-ref-arch-network"
            },
            "vpc_id": "vpc-056cd01aca671dba4"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:security-group/sg-00902d34bd745d6db",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-00902d34bd745d6db",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "804295906245",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "poc",
              "Example": "True",
              "Name": "nat-gateway-poc-vpc-default",
              "Project": "terraform-aws-ref-arch-network"
            },
            "tags_all": {
              "Environment": "poc",
              "Example": "True",
              "Name": "nat-gateway-poc-vpc-default",
              "Project": "terraform-aws-ref-arch-network"
            },
            "vpc_id": "vpc-056cd01aca671dba4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:internet-gateway/igw-08a91e73d1d98dd08",
            "id": "igw-08a91e73d1d98dd08",
            "owner_id": "804295906245",
            "tags": {
              "Environment": "poc",
              "Example": "True",
              "Name": "nat-gateway-poc-vpc",
              "Project": "terraform-aws-ref-arch-network"
            },
            "tags_all": {
              "Environment": "poc",
              "Example": "True",
              "Name": "nat-gateway-poc-vpc",
              "Project": "terraform-aws-ref-arch-network"
            },
            "vpc_id": "vpc-056cd01aca671dba4"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:vpc/vpc-056cd01aca671dba4",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0c60b720f8768e522",
            "default_route_table_id": "rtb-041a8258958b3b18a",
            "default_security_group_id": "sg-00902d34bd745d6db",
            "dhcp_options_id": "dopt-a6babfdd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-056cd01aca671dba4",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0d5fa0a77318c5c09",
            "ipv6_cidr_block": "2600:1f18:5b2d:1c00::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-041a8258958b3b18a",
            "owner_id": "804295906245",
            "tags": {
              "Environment": "poc",
              "Example": "True",
              "Name": "nat-gateway-poc-vpc",
              "Project": "terraform-aws-ref-arch-network"
            },
            "tags_all": {
              "Environment": "poc",
              "Example": "True",
              "Name": "nat-gateway-poc-vpc",
              "Project": "terraform-aws-ref-arch-network"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}